horizontal scroll bug fixed

--- a/src/sass/pages/_sort.scss
+++ b/src/sass/pages/_sort.scss
@@ -25,8 +25,8 @@
     .sortButton-holder::after {
         content: ' ';
         position: absolute;
-        width: 100%;
-        height: 100%;
+        width: 15px;
+        height: 15px;
         @include respond-to(mobile-extra-small){
             margin-left: 5px;
         }
